--- a/check_datastore.yml
+++ b/check_datastore.yml
@@ -1,4 +1,7 @@
 ---
-- name: collect a list of the datacenters
-  vmware.vmware_rest.vcenter_datacenter_info:
-  register: my_datacenters
+- name: Check Datastore
+  hosts: localhost
+  tasks:
+    - name: collect a list of the datacenters
+      vmware.vmware_rest.vcenter_datacenter_info:
+      register: my_datacenters
