--- a/check_clusters.yml
+++ b/check_clusters.yml
@@ -1,8 +1,13 @@
-- name: Build a list of all the clusters
-  vmware.vmware_rest.vcenter_cluster_info:
-  register: all_the_clusters
+---
+- name: Check Datastore
+  hosts: localhost
+  tasks:
 
-- name: Retrieve details about the first cluster
-  vmware.vmware_rest.vcenter_cluster_info:
-    cluster: "{{ all_the_clusters.value[0].cluster }}"
-  register: my_cluster_info
+    - name: Build a list of all the clusters
+      vmware.vmware_rest.vcenter_cluster_info:
+      register: all_the_clusters
+    
+    - name: Retrieve details about the first cluster
+      vmware.vmware_rest.vcenter_cluster_info:
+        cluster: "{{ all_the_clusters.value[0].cluster }}"
+      register: my_cluster_info
