--- a/create_vm.yml
+++ b/create_vm.yml
@@ -2,18 +2,9 @@
 - name: Create VM from template
   hosts: localhost
   tasks:
-    - name: Create a content library based on a DataStore
-      vmware.vmware_rest.content_locallibrary:
-        name: my_library_on_datastore
-        description: automated
-        publish_info:
-          published: true
-          authentication_method: NONE
-        storage_backings:
-        - datastore_id: "{{ lookup('vmware.vmware_rest.datastore_moid', '/my_dc/datastore/local') }}"
-          type: DATASTORE
-        state: present
-      register: nfs_lib
+    - name: List Local Content Library
+      vmware.vmware_rest.content_locallibrary_info:
+      register: my_content_library
     
     - name: Get the list of items of the NFS library
       vmware.vmware_rest.content_library_item_info:
